Fix spacing

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -54,6 +54,7 @@ body {
     list-style: none;
     position: absolute;
     left: -35px;
+    display: flex;
 }
 
 .nav-element a {
